# golem-py

./: .gitignore  README.md  bindgen.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: pyproject.toml  transaction.py
src/golem_cloud/: durability.py  host.py  transaction.py
src/golem_py/: durability.py  host.py  transaction.py
src/golem_py/urllib3_wasi_backend/: __init__.py
src/wit_world/exports/: __init__.py  load_snapshot.py  oplog_processor.py
src/wit_world/imports/: blobstore.py  container.py  durability.py  eventual.py  eventual_batch.py  golem_rpc_types.py  host.py  ip_name_lookup.py  mysql.py  postgres.py  streams.py  types.py  wasi_blobstore_types.py  wasi_keyvalue_error.py  wasi_keyvalue_types.py
wit/: deps.toml  world.wit
