[project]
name = "golem_py"
version = "0.1.0"
description = "A library that helps with writing Golem components in Python "
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Environment :: WebAssembly :: WASI",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/golemcloud/golem-py"
Documentation = "https://github.com/golemcloud/golem-py"
Repository = "https://github.com/golemcloud/golem-py"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
