[project]
name = "golem-py"
version = "0.1.0"
description = "A library that helps with writing Golem components in Python "
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Environment :: WebAssembly :: WASI",
    "Typing :: Typed"
]
dependencies = [
    "golem-py-bindings==0.1.0"
]

[project.urls]
Homepage = "https://github.com/golemcloud/golem-py"
Documentation = "https://github.com/golemcloud/golem-py"
Repository = "https://github.com/golemcloud/golem-py"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "componentize-py==0.16.0",
    "golem-py-bindings-dev",
    "generated-placeholder-bindings"
]

[tool.uv.build-backend]
module-root = "src"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# it's part of the workspace, but we don't want to use it when developing locally
golem-py-bindings = { workspace = true, marker = "sys_platform == 'never'" }
golem-py-bindings-dev = { workspace = true }

[tool.uv]
override-dependencies = [
    "golem-py-bindings; sys_platform == 'never'",
]
